Got a decent understanding

--- a/rag.ipynb
+++ b/rag.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "c396bed7-ee3e-4b4a-b905-75dfe81b7a21",
    "metadata": {},
    "outputs": [],
@@ -124,19 +124,20 @@
     "from dotenv import load_dotenv\n",
     "import os \n",
     "load_dotenv()\n",
-    "import chromadb"
+    "import chromadb\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv(\"OPENAI_SECRET_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "b42be1e2-0e6d-4825-a7c9-905096416931",
    "metadata": {},
    "outputs": [],
    "source": [
     "#creating the embedding function\n",
     "# will help us embed the chopped up chunks \n",
-    " openai_ef = embedding_functions.OpenAIEmbeddingFunction(api_key = secret, model_name = \"text-embedding-3-small\")"
+    "openai_ef = embedding_functions.OpenAIEmbeddingFunction(api_key = os.environ['OPENAI_API_KEY'], model_name = \"text-embedding-3-small\")"
    ]
   },
   {
